--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
   },
   "homepage": "https://github.com/Gstring-w/MindMap#readme",
   "devDependencies": {
+    "css-loader": "^5.2.4",
     "html-webpack-plugin": "5.3.1",
+    "less": "^4.1.1",
+    "less-loader": "^8.1.1",
+    "style-loader": "^2.0.0",
     "ts-loader": "9.1.1",
     "typescript": "4.2.4",
+    "url-loader": "^4.1.1",
     "webpack": "5.35.1",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "4.6.0",
